app/media-server/sonarr/sonarr-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
        - image: pmialon/sonarr
          name: sonarr
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads # The mountpoint inside the container
              name: nfs-vol
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr
        - name: nfs-vol
          nfs:
            server: 192.168.0.21 # IP to our NFS server
            path: /media/ # The path to our NFS share # The exported directory
status: {}
