app/media-server/sonarr/sonarr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
