app/media-server/sonarr/sonarr-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: sonarr
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: sonarr.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sonarr.home.adaminformatika.hu
    secretName: sonarr.home.adaminformatika.hu
